# coursework-autopilot

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-04-15-course-design-autopilot-design.md  2026-04-15-course-design-autopilot-plan.md
docs/superpowers/plans/: 2026-04-15-course-design-autopilot-upgrade.md
docs/superpowers/specs/: 2026-04-15-course-design-autopilot-upgrade-design.md
mcp_server/: client-config.example.json  server.py
publish/coursework-autopilot/references/: mcp-contract.md  repo-layout.md
publish/coursework-autopilot/scripts/: extract_course_requirements.py  inspect_course_workspace.py
skills/course-design-autopilot/: SKILL.md  parse_docs.py  requirements.txt
skills/coursework-autopilot/: SKILL.md
skills/coursework-autopilot/agents/: openai.yaml
skills/coursework-autopilot/assets/report-template/: REPORT.md
skills/coursework-autopilot/references/: report-writing.md  setup.md
skills/coursework-autopilot/scripts/: init_report_from_template.py
src/course_design_autopilot/: __init__.py  models.py  service.py
tests/: test_course_design_service.py  test_mcp_tools.py  test_parse_docs.py
